--- a/Module2-Assignment/Quotes2.html
+++ b/Module2-Assignment/Quotes2.html
@@ -15,7 +15,7 @@
  <div class="col-lg-4 col-md-6 col-sm-12">
   <div class="section">
   	<h2 class="Kakashi">Kakashi</h2>
-  	<p>"Hello, studets. Sorry, I'm late. Today, I got lost on the path of life."</p>
+  	<p>"Hello, students. Sorry, I'm late. Today, I got lost on the path of life."</p>
   </div>
  </div>
 
@@ -29,7 +29,7 @@
  <div class="col-lg-4 col-md-12 col-sm-12">
    <div class="section">
  	<h2 class="Naruto">Naruto</h2>
- 	<p>"Because they saved me from myself, they rescued me from my loneliness, They were the first to accept me for who I am, They're my friends."</p>
+ 	<p>"Because they saved me from myself, they rescued me from my loneliness. They were the first to accept me for who I am. They're my friends."</p>
   </div>
  </div>
 
